tests/negative/lambda_arity.spk
; Calling a lambda with the wrong number of arguments.
((lambda (x y) x) 1)
